RESOLVED FIXED12480
REGRESSION (NativeListBox): Deselecting option causes list to jump to top
https://bugs.webkit.org/show_bug.cgi?id=12480
Summary REGRESSION (NativeListBox): Deselecting option causes list to jump to top
Matt Lilek
Reported 2007-01-30 09:38:55 PST
1. Load the attached testcase 2. Focus and select the entire listbox. 3. Scroll down towards the bottom, but not all the way (if you see "SCROLL UP" um...scroll up). 4. Deselect an option like HTML Editing or HTML DOM, the listbox will jump all the way to the top, though the option is deselected properly. 5. If you scroll all the way to the bottom, it only jumps to the top if you deselect the SCROLL UP option.
Attachments
Reduction (543 bytes, text/html)
2007-01-30 09:39 PST, Matt Lilek
no flags
Matt Lilek
Comment 1 2007-01-30 09:39:29 PST
Created attachment 12797 [details] Reduction
Mark Rowe (bdash)
Comment 2 2007-02-01 18:42:04 PST
Adele Peterson
Comment 3 2007-02-08 20:31:01 PST
Committed revision 19520.
Note You need to log in before you can comment on or make changes to this bug.